--- a/assets/scss/components/_breadcrumb.scss
+++ b/assets/scss/components/_breadcrumb.scss
@@ -1,4 +1,9 @@
 /* 麵包屑導覽 */
+.breadCrumb-link {
+  color: var(--neutral-600);
+  font-weight: 500;
+}
+
 .breadcrumb-item + .breadcrumb-item::before {
   content: "/";
   padding: 0 12px;
