--- a/assets/scss/helper/_utils.scss
+++ b/assets/scss/helper/_utils.scss
@@ -22,11 +22,7 @@ nav {
   display: none;
 }
 
-@media (max-width: 767px) {
-  .d-md-none {
-    display: none;
-  }
-
+@media (max-width: 768px) {
   .d-md-block {
     display: block;
   }
@@ -322,6 +318,10 @@ nav {
     margin-top: 32px;
   }
 
+  .me-md-16 {
+    margin-right: 16px;
+  }
+
   .px-md-12 {
     padding-left: 12px;
     padding-right: 12px;
@@ -351,6 +351,10 @@ nav {
     padding-bottom: 40px;
   }
 
+  .pb-md-40 {
+    padding-bottom: 40px;
+  }
+
   .pt-md-0 {
     padding-top: 0;
   }
@@ -366,6 +370,9 @@ nav {
   .mb-md-8 {
     margin-bottom: 8px;
   }
+  .mb-md-12 {
+    margin-bottom: 12px;
+  }
 
   .mb-md-16 {
     margin-bottom: 16px;
@@ -377,6 +384,9 @@ nav {
 
   .mb-md-32 {
     margin-bottom: 32px;
+  }
+  .d-md-none {
+    display: none;
   }
 }
 
@@ -517,10 +527,16 @@ nav {
   width: calc(100% / 12 * 12);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .row {
     margin-left: -6px;
     margin-right: -6px;
+  }
+
+  .col-md-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100%;
   }
 
   .col-md-1 {
