--- a/assets/scss/pages/_product-detail.scss
+++ b/assets/scss/pages/_product-detail.scss
@@ -1,105 +1,77 @@
+// 產品詳情頁面，記得全部改成SCSS
+
 .product-row {
   display: flex;
   flex-wrap: wrap;
   margin-left: -4px;
   margin-right: -4px;
 }
-
 .product-col {
-  padding-left: 4px;
-  padding-right: 4px;
   width: calc(100% / 12 * 6);
+  padding-right: 4px;
+  padding-left: 4px;
 }
 
-@media (max-width: 767px) {
-  .product-row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -16px;
-    margin-right: -16px;
-  }
-
-  .product-col {
-    width: calc(100%);
-  }
-}
-
-.product-price {
-  font-weight: 400;
+.del-price {
   font-size: 14px;
-  line-height: 1.5;
+  font-weight: 400;
   color: $neutral-500;
   padding-left: 8px;
 }
-
 .product-color {
   width: 64px;
   text-align: center;
   color: $neutral-600;
-  cursor: pointer;
 }
-
-.size-btn {
+.btn-product-size {
   border: 1px solid $neutral-300;
   width: 160px;
-  padding: 12px 24px;
 }
 
-.size-act,
-.size-hov:hover {
+.btn-product-size.active,
+.btn-product-size:hover {
   border-color: $neutral-900;
 }
 
-.btn-like {
-  display: flex;
-  gap: 8px;
-}
-
-.btn-like .btn {
+.product-action .btn {
   width: 50%;
 }
-
-.btn-like .bi {
-  font-size: 20px;
-  padding-right: 8px;
-}
-
-@media (max-width: 576px) {
-  .btn-like .btn {
-    width: auto;
-  }
-
-  .btn-like .btn-booking {
-    flex-grow: 8;
-    flex-shrink: 1;
-    flex-basis: auto;
-  }
-}
-
-.info-title {
+.product-info-title {
   font-weight: 500;
-  color: $neutral-900;
 }
-
-.product-info {
-  border-bottom: 1px solid $neutral-300;
-}
-.product-info p {
+.product-info-item p {
   color: $neutral-600;
 }
-.best-select-card a:hover {
-  opacity: 0.8;
+.product-info-item {
+  border-bottom: 1px solid $neutral-300;
+}
+footer {
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 400;
+  text-align: center;
+  text-align: center;
 }
 
-@media (max-width: 767px) {
-  .best-select .row {
-    flex-wrap: nowrap;
-    overflow-x: auto;
+@media (max-width: 768px) {
+  .product-col {
+    width: 100%;
+    padding-right: 4px;
+    padding-left: 4px;
   }
-
-  .col-3 {
-    display: flex;
-    flex-wrap: wrap;
-    min-width: 85%;
+  .product-action .btn-dark {
+    width: 100%;
+  }
+  .product-action .btn-light {
+    width: auto;
+    margin-left: auto;
+  }
+  .mightLike {
+    max-width: 300px;
+    height: auto;
+  }
+  .container .py-48 .row {
+    flex-wrap: nowrap;
+    overflow-x: hidden;
   }
 }
